# data-validation

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yaml  docs.yml
api/: index.html
docs/: api.md  index.md  release_notes.md
release_notes/: index.html
search/: search_index.json
tests/: test_core.py
